// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`testResponseStatusCode should add test for status code 1`] = `
[
  "// Validate response status code 
pm.test("[GET]::/crm/companies/:id - Response status code is 400", function () {
    pm.expect(pm.response.code).to.equal(400);
});
",
]
`;

exports[`testResponseStatusCode should add test with separator symbol for status code 1`] = `
[
  "// Validate response status code 
pm.test("[GET]==/crm/companies/:id - Response status code is 400", function () {
    pm.expect(pm.response.code).to.equal(400);
});
",
]
`;
